# assignment

./: CMakeLists.txt
include/: csc232.h  expanded_templates.h
src/main/cpp/: demo.cpp  main.cpp
src/test/cpp/: task1_tests.cpp  task2_tests.cpp  task3_tests.cpp
